got hearts round fully working and fixed bug where users turn was being skipped.got rid of alerts and fixed some message prompts and added logic to end hearts round after last heart is played

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plpak</title>
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./queens.js"></script>
+    <script defer src="./hearts.js"></script>
   </head>
   <body>
+    <h1 cleass="round">No Hearts!</h1>
     <section class="players">
       <div class="name">Human</div>
       <div class="name">Player 2</div>
@@ -21,6 +22,8 @@
       <div class="score"></div>
       <div class="score"></div>
     </section>
+
+<section class="notifications"></section>
 
     <section class="tophand"></section>
 
