--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plpak</title>
+    <title>King of Hearts Game</title>
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./hearts.js"></script>
+    <script defer src="./king.js"></script>
   </head>
   <body>
-    <h1 cleass="round">No Hearts!</h1>
+    <h1 class="round">King of Hearts Game</h1>
     <section class="players">
       <div class="name">Human</div>
       <div class="name">Player 2</div>
