--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>King of Hearts Game</title>
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./king.js"></script>
+    <!-- Load Controller as an ES6 Module -->
+    <script type="module" src="./controller.js"></script>
   </head>
   <body>
-    <h1 class="round">King of Hearts Game</h1>
+    <h1 class="round">Loading...</h1>
     <section class="players">
       <div class="name">Human</div>
       <div class="name">Player 2</div>
