--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   </head>
   <body>
     <h1 class="round">Loading...</h1>
-    <section class="players">
-      <div class="name">Human</div>
-      <div class="name">Player 2</div>
-      <div class="name">Player 3</div>
-      <div class="name">Player 4</div>
-    </section>
 
     <section class="scoreboard">
-      <div class="score"></div>
-      <div class="score"></div>
-      <div class="score"></div>
-      <div class="score"></div>
+      <div class="score-row">
+        <div class="score-name">Human</div>
+        <div class="score"></div>
+      </div>
+      <div class="score-row">
+        <div class="score-name">Player 2</div>
+        <div class="score"></div>
+      </div>
+      <div class="score-row">
+        <div class="score-name">Player 3</div>
+        <div class="score"></div>
+      </div>
+      <div class="score-row">
+        <div class="score-name">Player 4</div>
+        <div class="score"></div>
+      </div>
     </section>
 
 <section class="notifications"></section>
