many styling updates. Added user name input.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,45 @@
 
     <!-- Vertical scoreboard in top-right corner -->
     <section class="scoreboard">
+      <div class="score-header">
+        <div class="score-name">Player</div>
+        <div class="cycle-header">Rnd 1</div>
+        <div class="cycle-header">Rnd 2</div>
+        <div class="cycle-header">Rnd 3</div>
+        <div class="cycle-header">Rnd 4</div>
+        <div class="cycle-header total">Total</div>
+      </div>
       <div class="score-row">
         <div class="score-name">Human</div>
-        <div class="score"></div>
+        <div class="score cycle-1"></div>
+        <div class="score cycle-2"></div>
+        <div class="score cycle-3"></div>
+        <div class="score cycle-4"></div>
+        <div class="score total"></div>
       </div>
       <div class="score-row">
         <div class="score-name">Player 2</div>
-        <div class="score"></div>
+        <div class="score cycle-1"></div>
+        <div class="score cycle-2"></div>
+        <div class="score cycle-3"></div>
+        <div class="score cycle-4"></div>
+        <div class="score total"></div>
       </div>
       <div class="score-row">
         <div class="score-name">Player 3</div>
-        <div class="score"></div>
+        <div class="score cycle-1"></div>
+        <div class="score cycle-2"></div>
+        <div class="score cycle-3"></div>
+        <div class="score cycle-4"></div>
+        <div class="score total"></div>
       </div>
       <div class="score-row">
         <div class="score-name">Player 4</div>
-        <div class="score"></div>
+        <div class="score cycle-1"></div>
+        <div class="score cycle-2"></div>
+        <div class="score cycle-3"></div>
+        <div class="score cycle-4"></div>
+        <div class="score total"></div>
       </div>
     </section>
 
