Fix deployment paths - replace %PUBLIC_URL% with relative paths for proper build

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -16,12 +16,12 @@
     <div id="root"></div>
     
     <!-- Load the game modules as ES6 modules -->
-    <script type="module" src="%PUBLIC_URL%/tricks.js"></script>
-    <script type="module" src="%PUBLIC_URL%/hearts.js"></script>
-    <script type="module" src="%PUBLIC_URL%/queens.js"></script>
-    <script type="module" src="%PUBLIC_URL%/king.js"></script>
-    <script type="module" src="%PUBLIC_URL%/solitaire.js"></script>
+    <script type="module" src="./tricks.js"></script>
+    <script type="module" src="./hearts.js"></script>
+    <script type="module" src="./queens.js"></script>
+    <script type="module" src="./king.js"></script>
+    <script type="module" src="./solitaire.js"></script>
     <!-- Load Controller as an ES6 Module -->
-    <script type="module" src="%PUBLIC_URL%/controller.js"></script>
+    <script type="module" src="./controller.js"></script>
   </body>
 </html> 
